# hicosmo-jax

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BAO_SYSTEM_README.md  CODEX_ARCHITECTURE_REVIEW_IM.md  CODEX_REVIEW_REQUEST_IM.md  CODE_REVIEW_FIXES_SUMMARY.md  DEFAULT_NEW_STYLE_SUMMARY.md  DIFFRAX_CLEANUP_SUMMARY.md  FINAL_VISUALIZATION_REPORT.md  FRAMEWORK_STATUS_REPORT.md  INTENSITY_MAPPING_ARCHITECTURE_ISSUES.md  JAX_COMPATIBILITY_ANALYSIS_REPORT.md  MCMC_VISUALIZATION_REPORT.md  NEW_MCMC_PERFORMANCE_ANALYSIS.md  PANTHEON_CONSTRAINTS_REPORT.md  PDF_OUTPUT_README.md  PHASE1_REFACTORING_COMPLETE.md  PHASE2_COMPLETE_ALL_SURVEYS_CLEANED.md  PROFESSIONAL_STYLE_REPORT.md  README.md  README_HICOSMO.md  REFACTOR_PLAN.md  SAMPLERS_REFACTOR_REPORT.md  TODO_ROADMAP.md  VISUALIZATION_BACKUP_2025_01_17.md  VISUALIZATION_COMPLETE_TEST_REPORT.md  compare_pantheon_constraints.py  core.py  debug_distance.py  debug_pantheon_likelihood.py  demo_unified_cosmology.py  example_bao_analysis.py  example_h0licow_analysis.py  example_h0licow_mcmc.py  example_planck_distance_mcmc.py  example_sh0es_mcmc.py  example_tdcosmo_mcmc.py  final_test_clean.py  final_verification_test.py  (+36 more)
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_FIX_SOLUTIONS.md  DEVELOPMENT.md  PROFESSIONAL_ARCHITECTURE.md  h0licow.md  mcmc_usage_guide.md  optimization_guide.md  planck_distance_prior.md
examples/: basic_analysis.py  basic_mcmc.py  mcmc_complete_guide.py  mcmc_cosmology.py  mcmc_simple.py  multi_chain_comparison.py  run_ska1_forecasts.py  visualization_complete_guide.py
hicosmo/: AGENTS.md  __init__.py  multicore_init.py
hicosmo/cmb/: __init__.py  lensing_cl.py  polarization_cl.py  temperature_cl.py
hicosmo/core/: __init__.py  base.py  cosmology.py  fast_integration.py  unified_parameters.py
hicosmo/fisher/: __init__.py  figures_of_merit.py  fisher_matrix.py  forecasting.py  intensity_mapping.py  numerical_derivatives.py
hicosmo/forecasts/: __init__.py  intensity_mapping.py
hicosmo/interfaces/: __init__.py  camb_interface.py  class_interface.py  validation_tools.py
hicosmo/likelihood/: __init__.py  likelihoods.py
hicosmo/likelihoods/: __init__.py  bao_base.py  bao_datasets.py  base.py  h0licow.py  likelihoods.py  multi_probe.py  observational_data.py  pantheonplus.py  planck_distance.py  sh0es.py  tdcosmo.py
hicosmo/models/: __init__.py  cpl.py  lcdm.py  wcdm.py
results/: pantheon_lcdm_summary.json
tests/: REAL_PERFORMANCE_COMPARISON.md  __init__.py  benchmark_optimization_vs_warmup.py  check_samples_count.py  corrected_benchmark.py  debug_config.py  debug_convergence.py  debug_hicosmo_test.py  debug_multicore.py  debug_optimization_issue.py  elegant_init_demo.py  final_method_test.py  final_multicore_guide.py  hicosmo_vs_qcosmc_benchmark.py  large_scale_benchmark.py  multi_core_test.py  multicore_comparison.py  multicore_correct_usage.py  multicore_usage_example.py  new_mcmc_benchmark.py  new_mcmc_performance_report.md  performance_report.md  performance_visualization_data.py  quick_verification.py  real_comparison_test.py  real_samples_verification.py  run_multicore_comparison.py  samples_behavior_guide.py  simple_mcmc_comparison.py  single_core_test.py  test_MC.py  test_auto_mcmc_polynomial.py  test_benchmark_comparison.py  test_checkpoint_system.py  test_config_init_final.py  test_default_behavior.py  test_elegant_init.py  test_fast_integration_functionality.py  test_final_benchmark_comparison.py  test_fisher_visualization.py  (+17 more)
(+41 files in other folders)
